--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,7 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="title_activity_physical_scheduler">PhysicalSchedulerActivity</string>
+    <string name="title_activity_social_scheduler">SocialSchedulerActivity</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
