Added sleep recorder and emoji support.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,4 +96,5 @@
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_test_calendar">testCalendar</string>
     <string name="title_activity__calendar">Calendar</string>
+    <string name="title_activity__sleep_recorder">Activity_SleepRecorder</string>
 </resources>
