--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,5 @@
 
     <string name="action_share">Share</string>
     <string name="action_reply"></string>
+    <string name="title_activity__sleep_data">Activity_SleepData</string>
 </resources>
