--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,13 +82,13 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
-    <string name="title_activity_physical_scheduler">PhysicalSchedulerActivity</string>
-    <string name="title_activity_social_scheduler">SocialSchedulerActivity</string>
-    <string name="title_activity_diet_recorder">DietRecorderActivity</string>
+    <string name="title_activity_physical_scheduler">Physical Activity Scheduler</string>
+    <string name="title_activity_academic_scheduler_recorder">Academic Scheduler/Recorder</string>
+    <string name="title_activity_social_scheduler">Social Scheduler</string>
+    <string name="title_activity_diet_recorder">Diet Recorder</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_academic">AcademicActivity</string>
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
     <string name="tab_text_3">Tab 3</string>
@@ -96,7 +96,7 @@
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_test_calendar">testCalendar</string>
     <string name="title_activity__calendar">Calendar</string>
-    <string name="title_activity__sleep_recorder">Activity_SleepRecorder</string>
+    <string name="title_activity__sleep_recorder">Sleep Recorder</string>
 
     <string name="__sleep_quality_notification_title_template">" Sleep quality": %1$s</string>
 
